examples/bad/02-02-wiele-roznych-deklaracji.gg
alg Drugi = A | A(Int) | B;

2